# terminal-based-calculator

./: .clangd  .gitignore  CMakeLists.txt  LICENSE  README.md  compile_commands.json  doxygenConfig
include/: calculator.hpp  calculator_system.hpp  debug.hpp  save_system.hpp  terminal_ui.hpp
src/: calculator.cpp  calculator_system.cpp  debug.cpp  main.cpp  save_system.cpp  terminal_ui.cpp
